--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,70 @@
-HELP.md
-target/
+# ===== OS =====
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Icon?
+Desktop.ini
+
+# ===== Java / Maven =====
+/target/
+/out/
+/build/
+*.class
+*.log
+hs_err_pid*
+replay_pid*
+*.hprof
+# Maven wrapper JAR (gerado pelo wrapper em algumas versões)
 .mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# ===== Gradle (se algum dia usar) =====
+/.gradle/
+/gradle/
+/build/
 
-### IntelliJ IDEA ###
-.idea
-*.iws
+# ===== IntelliJ IDEA =====
+.idea/
 *.iml
+*.iws
 *.ipr
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# ===== Eclipse (caso alguém use) =====
+.project
+.classpath
+.settings/
+.apt_generated/
+.factorypath
+.springBeans
 
-### VS Code ###
+# ===== VS Code =====
 .vscode/
+.history/
+
+# ===== Node/Web (caso adicione front build) =====
+node_modules/
+dist/
+coverage/
+*.map
+
+# ===== Arquivos temporários =====
+*.swp
+*.swo
+~$*
+*.tmp
+
+# ===== Env & Segredos =====
+.env
+.env.*
+*.env
+*.key
+*.pem
+*.p12
+*.jks
+
+# ===== Configs locais com credenciais =====
+src/main/resources/application.properties
+src/main/resources/application-local.properties
+src/main/resources/*.secret.properties
+
+# ===== Outros opcionais =====
+/README_images/
